<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings1">계산기</string>
    <string name="action_settings2">히스토리</string>

    <string name="d_zero">00</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="percent">%</string>
    <string name="div">÷</string>
    <string name="mul">x</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="equal">=</string>

    <string name="clear">C</string>
    <string name="del">del</string>
    <string name="dot">.</string>

    <string name="display"></string>
    <string name="result"></string>
    <string name="history"></string>
</resources>
